# superconductor

./: .gitignore  Cargo.toml  README.md  architecture.md  check_licenses.sh  compile_shaders.sh  deny.toml  index.html  rust-toolchain.toml
assets/lighting/: lightvol_x.ktx2  lightvol_y.ktx2
assets/models/: sponza_cubes.glb
compiled-shaders/: animated_vertex.spv  animated_vertex.spv.wgsl  bc6.spv.wgsl  blit.spv  blit.spv.wgsl  depth_prepass_vertex.spv  depth_prepass_vertex.spv.wgsl  flat_blue.spv  flat_colour.spv  flat_colour.spv.wgsl  fragment.spv  fragment.spv.wgsl  fragment_alpha_blended.spv  fragment_alpha_blended.spv.wgsl  fragment_alpha_clipped.spv  fragment_alpha_clipped.spv.wgsl  fragment_skybox.spv  fragment_skybox.spv.wgsl  fragment_ui.spv  fullscreen_tri.spv  fullscreen_tri.spv.wgsl  line_vertex.spv  line_vertex.spv.wgsl  particle_fragment.spv  particle_vertex.spv  single_view_animated_vertex.spv  single_view_animated_vertex.spv.wgsl  single_view_depth_prepass_vertex.spv  single_view_depth_prepass_vertex.spv.wgsl  single_view_fragment.spv  single_view_fragment.spv.wgsl  single_view_fragment_alpha_blended.spv  single_view_fragment_alpha_blended.spv.wgsl  single_view_fragment_alpha_clipped.spv  single_view_fragment_alpha_clipped.spv.wgsl  single_view_line_vertex.spv  single_view_line_vertex.spv.wgsl  single_view_particle_vertex.spv  single_view_tonemap.spv  single_view_tonemap.spv.wgsl  (+14 more)
demo/: Cargo.toml  architecture.md  build_web.sh  build_webgpu.sh
demo/src/: lib.rs  main.rs
demo/superconductor-demo.xcodeproj/: project.pbxproj
demo/superconductor-demo.xcodeproj/xcuserdata/ashley.xcuserdatad/xcschemes/: xcschememanagement.plist
demo/web/: index.html
demo/web/assets/cubemaps/: helipad_lambertian.ktx2  lodge_diff.ktx2  noon.ktx2
demo/web/assets/lighting/: lightmap_comp_y.ktx2  lightmap_comp_z.ktx2  lightvol.ktx2  lightvol_x.ktx2  lightvol_y.ktx2  lightvol_z.ktx2
demo/web/assets/lighting/astc/: lightmap.ktx2  lightmap_x.ktx2  lightmap_y.ktx2  lightmap_z.ktx2  lightvol.ktx2  lightvol_x.ktx2  lightvol_y.ktx2  lightvol_z.ktx2
demo/web/assets/lighting/bcn/: lightmap.ktx2  lightmap_x.ktx2  lightvol_x.ktx2  lightvol_y.ktx2  lightvol_z.ktx2
demo/web/assets/lighting/uncompressed/: lightvol.ktx2  lightvol_x.ktx2  lightvol_y.ktx2
demo/web/assets/models/: fire_giant.glb  sponza_planes.glb
demo/web/assets/models/Sponza/glTF/: Sponza.gltf
demo/web/assets/models/ferris/: ferris.gltf
demo/web/assets/smoke/: lut.ktx2
demo/web/assets/smoke/burst/: TX_Pyro_AerialBurst_E.tga.ktx2  TX_Pyro_AerialBurst_N.tga.ktx2  TX_Pyro_AerialBurst_P.tga.ktx2
demo/web/pkg/: superconductor_demo.d.ts  superconductor_demo.js  superconductor_demo_bg.wasm.d.ts
gltf-helpers/: Cargo.toml
gltf-helpers/src/: animation.rs  lib.rs
parent/parent/: Info.plist  main.m
parent/parent.xcodeproj/: project.pbxproj
parent/parent.xcodeproj/project.xcworkspace/xcuserdata/ashley.xcuserdatad/: UserInterfaceState.xcuserstate
parent/parent.xcodeproj/xcuserdata/ashley.xcuserdatad/xcschemes/: xcschememanagement.plist
parent/parentTests/: parentTests.swift
parent/parentUITests/: parentUITests.swift  parentUITestsLaunchTests.swift
pkg/: superconductor_demo.d.ts  superconductor_demo.js  superconductor_demo_bg.wasm.d.ts
renderer-core/: Cargo.toml
renderer-core/src/: assets.rs  bind_group_layouts.rs  buffers.rs  culling.rs  ibl.rs  instance.rs  lib.rs  mutable_bind_group.rs  permutations.rs  pipelines.rs  utils.rs
renderer-core/src/assets/: materials.rs  models.rs  textures.rs
renderer-core/src/assets/models/: accessors.rs  texture_loading.rs
shaders/: Cargo.toml  deny.toml
shaders/src/: lib.rs  single_view.rs
shared-structs/: Cargo.toml
shared-structs/src/: lib.rs
src/: assets.rs  components.rs  lib.rs  pipelines.rs  resources.rs  systems.rs
src/assets/: deprecated.rs
src/systems/: debugging.rs  rendering.rs
