[package]
name = "superconductor"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
bevy_app = { version = "0.9", default-features = false }
bevy_ecs = { version = "0.9", default-features = false }
log = "0.4.17"
wasm-bindgen = "0.2.84"
renderer-core = { path = "renderer-core" }
wasm-bindgen-futures = "0.4.34"
js-sys = "0.3.61"
futures = "0.3.28"
wgpu = { git = "https://github.com/expenses/wgpu", branch = "superconductor-webgpu" }
anyhow = "1.0.70"
url = "2.3.1"
winit = "0.28.3"
arrayvec = "0.7.2"
surf = { version = "2.3.2", default-features = false }

[dependencies.web-sys]
version = "=0.3.61"
features = [
    "HtmlButtonElement",
    "Document",
    "Navigator",
    "XrReferenceSpaceType",
    "XrSessionMode",
    "Navigator",
    "XrSystem",
    "XrSessionInit",
    "XrWebGlLayer",
    "XrWebGlLayerInit",
    "XrRenderStateInit",
    "XrRenderState",
    "XrReferenceSpace",
    "XrViewerPose",
    "XrView",
    "RequestInit",
    "Request",
    "Response",
]

[features]
wasm = ["renderer-core/wasm", "surf/wasm-client"]
webgl = ["wasm", "renderer-core/webgl"]
native = ["surf/curl-client"]

[workspace]
members = [
  "shared-structs",
  "gltf-helpers",
  "renderer-core",
  ".",
  "demo",
]

[profile.dev]
debug = true
[profile.dev.package."*"]
opt-level = 3
[profile.dev.package.renderer-core]
opt-level = 3
[profile.dev.package.superconductor]
opt-level = 3

[patch.'https://github.com/gfx-rs/naga']
naga = {git = "https://github.com/expenses/naga", branch = "wgsl-out-interpolate-flat"}

[patch.'https://github.com/BVE-Reborn/ktx2']
ktx2 = { git = "https://github.com/expenses/ktx2", branch = "astc-sfloat-formats" }
