[package]
name = "superconductor"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
bevy_app = { version = "0.9", default-features = false }
bevy_ecs = { version = "0.9", default-features = false }
log = "0.4.18"
wasm-bindgen = "0.2.86"
renderer-core = { path = "renderer-core" }
wasm-bindgen-futures = "0.4.36"
js-sys = "0.3.63"
futures = "0.3.28"
wgpu = { git = "https://github.com/expenses/wgpu", branch = "3d-compressed-tex" }
anyhow = "1.0.71"
url = "2.3.1"
winit = "0.28.6"
arrayvec = "0.7.2"
surf = { git = "https://github.com/expenses/surf-patched", branch = "update-deps", default-features = false }
ordered-float = "3.7.0"

[dependencies.web-sys]
version = "=0.3.63"
features = [
    "HtmlButtonElement",
    "Document",
    "Navigator",
    "XrReferenceSpaceType",
    "XrSessionMode",
    "Navigator",
    "XrSystem",
    "XrSessionInit",
    "XrWebGlLayer",
    "XrWebGlLayerInit",
    "XrRenderStateInit",
    "XrRenderState",
    "XrReferenceSpace",
    "XrViewerPose",
    "XrView",
    "RequestInit",
    "Request",
    "Response",
]

[features]
wasm = ["renderer-core/wasm", "surf/wasm-client"]
webgl = ["wasm", "renderer-core/webgl"]
native = ["surf/curl-client"]

[workspace]
members = [
  "shared-structs",
  "gltf-helpers",
  "renderer-core",
  ".",
  "demo",
]

[profile.dev]
debug = true
[profile.dev.package."*"]
opt-level = 3
[profile.dev.package.renderer-core]
opt-level = 3
[profile.dev.package.superconductor]
opt-level = 3

[patch.'https://github.com/gfx-rs/naga']
# This has been upstreamed but you're forced to change sources with patches :/
naga = { git = "https://github.com/expenses/naga", rev = "da3f43394f3afd12b2776c3e29f69abaca7ca582" }

[patch.'https://github.com/BVE-Reborn/ktx2']
ktx2 = { git = "https://github.com/expenses/ktx2", branch = "astc-sfloat-formats" }
