[package]
name = "superconductor"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
bevy_app = { version = "0.11", default-features = false }
bevy_ecs = { version = "0.11", default-features = false }
log = "0.4.19"
wasm-bindgen = "0.2.87"
renderer-core = { path = "renderer-core" }
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3.64"
futures = "0.3.28"
wgpu = { git = "https://github.com/expenses/wgpu", branch = "3d-compressed-tex", features = ["fragile-send-sync-non-atomic-wasm"] }
anyhow = "1.0.72"
url = "2.4.0"
winit = "0.28.6"
arrayvec = "0.7.4"
surf = { git = "https://github.com/expenses/surf-patched", branch = "update-deps", default-features = false }
ordered-float = "3.7.0"

[dependencies.web-sys]
version = "0.3.64"
features = [
    "HtmlButtonElement",
    "Document",
    "Navigator",
    "XrReferenceSpaceType",
    "XrSessionMode",
    "Navigator",
    "XrSystem",
    "XrSessionInit",
    "XrWebGlLayer",
    "XrWebGlLayerInit",
    "XrRenderStateInit",
    "XrRenderState",
    "XrReferenceSpace",
    "XrViewerPose",
    "XrView",
    "RequestInit",
    "Request",
    "Response",
]

[features]
wasm = ["renderer-core/wasm", "surf/wasm-client"]
webgl = ["wasm", "renderer-core/webgl"]
native = ["surf/curl-client"]

[workspace]
members = [
  "shared-structs",
  "gltf-helpers",
  "renderer-core",
  ".",
  "demo",
]

[profile.dev]
debug = true
[profile.dev.package."*"]
opt-level = 3
[profile.dev.package.renderer-core]
opt-level = 3
[profile.dev.package.superconductor]
opt-level = 3

[patch.'https://github.com/BVE-Reborn/ktx2']
ktx2 = { git = "https://github.com/expenses/ktx2", branch = "astc-sfloat-formats" }
