[package]
name = "superconductor-demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
async-std = "1.12.0"
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
dolly = "0.3.1"
env_logger = "0.9.0"
futures = "0.3.21"
js-sys = "0.3.58"
log = "0.4.17"
pollster = "0.2.5"
simple-logging = "2.0.2"
superconductor = { path = ".." }
tokio = { version = "1.19.2", features = ["rt", "macros", "rt-multi-thread"] }
wasm-bindgen = "0.2.81"
wasm-bindgen-futures = "0.4.31"
web-sys = "0.3.58"

[features]
wasm = ["superconductor/wasm"]

[package.metadata.ios]
build_targets = ["aarch64-apple-ios", "aarch64-apple-ios-sim", "x86_64-apple-ios"]
dependencies = ["Metal.framework", "Security.framework", "UIKit.framework"]
