[package]
name = "superconductor-demo"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
dolly = "0.4"
env_logger = "0.10.0"
futures = "0.3.28"
js-sys = "0.3.64"
log = "0.4.19"
superconductor = { path = ".." }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = ["Location"] }
basis-universal-wasm = { git = "https://github.com/expenses/basis-universal-rs-wasm", rev = "a240b3c5aaffa2c0a60ce6a150a45a5c3a1c7d07" }
async-std = "1.12.0"

[features]
default = ["native"]
wasm = ["superconductor/wasm"]
webgl = ["wasm", "superconductor/webgl"]
native = ["superconductor/native"]
