[package]
name = "gltf-helpers"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
glam = { version = "0.22", features = ["bytemuck"] }
log = "0.4.17"
ordered-float = "3.7"
goth-gltf = { git = "https://github.com/expenses/goth-gltf", features = ["primitive_reader"] }
