[package]
name = "gltf-helpers"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
glam = { version = "0.24", features = ["bytemuck"] }
log = "0.4.20"
ordered-float = "3.7"
goth-gltf = { version = "0.1.1", features = ["primitive_reader"] }
