[package]
name = "renderer-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
raw-window-handle = "0.5.2"
wasm-bindgen = { version = "0.2.86", features = ["serde-serialize"] }
glow = "0.12.1"
wgpu = { git = "https://github.com/expenses/wgpu", branch = "3d-compressed-tex", features = ["spirv"] }
wgpu-hal = { git = "https://github.com/expenses/wgpu", branch = "3d-compressed-tex", optional = true }
wgpu-core = { git = "https://github.com/expenses/wgpu", branch = "3d-compressed-tex", optional = true }
log = "0.4.17"
glam = { version = "0.22", features = ["bytemuck"] }
shared-structs = { path = "../shared-structs" }
bytemuck = { version = "1.13.1", features = ["derive"] }
ktx2 = { git = "https://github.com/BVE-Reborn/ktx2", rev = "0e5b0febb09546c91bc845a5e7b5d04610d70044" }
zstd = { version = "0.12.3", default-features = false, features = ["wasm"] }
anyhow = "1.0.71"
url = "2.3.1"
wasm-bindgen-futures = "0.4.36"
gltf-helpers = { path = "../gltf-helpers" }
base64 = "0.21.1"
range-alloc = { git = "https://github.com/expenses/gfx", rev = "6afbeb6d9733e295404f4fe0ac936591e277a26e" }
parking_lot = "0.12.1"
image = { version = "0.24.6", default-features = false, features = ["jpeg", "png"] }
arc-swap = "1.6.0"
basis-universal = { git = "https://github.com/expenses/basis-universal-rs", rev = "d7ffc5afb2101ce645ebdf8b8bcefdefbcbd1610" }
async-std = "1.12.0"
futures = "0.3.28"
goth-gltf = { git = "https://github.com/expenses/goth-gltf", rev = "4411edc0aa9157f68bc9f80fdb499e861f225354" }
meshopt-decoder = { git = "https://github.com/expenses/meshopt-decoder", rev = "1d7eb93c61d9acc2583a50cb3ec7032bbffec61e" }
js-sys = "0.3.63"

[dependencies.web-sys]
version = "=0.3.63"
features = [
    "XrSession",
    "XrFrame",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "XrRigidTransform",
    "DomPointReadOnly",
    "XrWebGlLayer",
]

[features]
wasm = []
webgl = ["wasm", "wgpu/webgl", "wgpu-core", "wgpu-hal"]
