[package]
name = "shared-structs"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
glam = { version = "0.24", features = ["libm"], default-features = false }
num-traits = { version = "0.2.15", default-features = false }

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }

[features]
std = ["glam/bytemuck"]
